--- a/frontend/index.html
+++ b/frontend/index.html
@@ -78,27 +78,29 @@
                         <p class="text-xs text-gray-500 uppercase tracking-wide">Professional Suite</p>
                     </div>
                 </div>
-              <div class="flex items-center space-x-1 text-sm">
-    <span class="text-slate-500">Trusted by</span>
-    <span class="font-bold text-indigo-600" id="headerVisitorCount">0</span>
-    <span class="text-slate-500">users</span>
-</div>
+                <div class="flex items-center space-x-1 text-sm">
+                    <span class="text-slate-500">Trusted by</span>
+                    <span class="font-bold text-indigo-600" id="headerVisitorCount">0</span>
+                    <span class="text-slate-500">users</span>
+                </div>
             </div>
         </div>
     </header>
 
     <!-- Main Content -->
-    <main class="flex-1 flex items-center justify-center px-6 overflow-hidden">
+    <main class="flex-1 flex items-start justify-center px-6 py-4 overflow-auto">
         <div class="w-full max-w-6xl">
-            <!-- Upload Section -->
-            <div id="uploadSection" class="text-center">
-                <!-- Hero Title -->
-                <h2 class="text-4xl font-bold text-gray-900 mb-2">
-                    Precision Document Cleaning
-                </h2>
-                <p class="text-gray-600 text-base mb-6 max-w-3xl mx-auto">
-                    Remove watermarks, stamps, and margins from your PDFs with professional-grade accuracy. 100% private, client-side processing.
-                </p>
+            <!-- Upload Section - Always show the file card when uploaded -->
+            <div id="uploadSection" class="text-center mb-4">
+                <!-- Hero Title - Only show when no file uploaded -->
+                <div id="heroSection">
+                    <h2 class="text-4xl font-bold text-gray-900 mb-2">
+                        Precision Document Cleaning
+                    </h2>
+                    <p class="text-gray-600 text-base mb-6 max-w-3xl mx-auto">
+                        Remove watermarks, stamps, and margins from your PDFs with professional-grade accuracy. 100% private, client-side processing.
+                    </p>
+                </div>
 
                 <!-- Drop Zone -->
                 <div id="dropzone" class="dropzone-card max-w-xl mx-auto mb-6 border-2 border-dashed border-gray-300 rounded-2xl p-8 cursor-pointer bg-gradient-to-br from-gray-50 to-white transition-all">
@@ -114,30 +116,30 @@
                     <input type="file" id="fileInput" class="hidden" accept="application/pdf">
                 </div>
 
-                <!-- Uploaded File Display -->
-                <div id="uploadedFileDisplay" class="hidden max-w-xl mx-auto mb-6 bg-white rounded-xl p-3 shadow-md border border-gray-200">
+                <!-- Uploaded File Display with Close Button -->
+                <div id="uploadedFileDisplay" class="hidden max-w-xl mx-auto mb-6 bg-gradient-to-br from-indigo-50 to-white rounded-xl p-4 shadow-lg border-2 border-indigo-300">
                     <div class="flex items-center justify-between">
                         <div class="flex items-center space-x-3">
-                            <div class="w-10 h-10 bg-indigo-100 rounded-lg flex items-center justify-center">
-                                <svg class="w-5 h-5 text-indigo-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <div class="w-12 h-12 bg-indigo-600 rounded-lg flex items-center justify-center shadow-md">
+                                <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"/>
                                 </svg>
                             </div>
-                            <div class="text-left">
-                                <p class="font-semibold text-gray-900 text-sm" id="uploadedFileName">document.pdf</p>
-                                <p class="text-xs text-gray-500">Ready to process</p>
+                            <div class="text-left flex-1">
+                                <p class="font-bold text-gray-900 text-base" id="uploadedFileName">document.pdf</p>
+                                <p class="text-sm text-green-600 font-medium">✓ File uploaded successfully</p>
                             </div>
                         </div>
-                        <button id="removeFileBtn" class="text-gray-400 hover:text-red-600 transition-colors p-2">
-                            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/>
+                        <button id="removeFileBtn" class="text-gray-400 hover:text-red-600 hover:bg-red-50 transition-all p-2 rounded-lg" title="Remove file and upload another">
+                            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" d="M6 18L18 6M6 6l12 12"/>
                             </svg>
                         </button>
                     </div>
                 </div>
 
                 <!-- Features -->
-                <div class="grid grid-cols-1 sm:grid-cols-3 gap-4 max-w-3xl mx-auto">
+                <div id="featuresSection" class="grid grid-cols-1 sm:grid-cols-3 gap-4 max-w-3xl mx-auto">
                     <div class="feature-card bg-white border border-gray-200 rounded-xl p-5 text-center">
                         <div class="w-12 h-12 bg-indigo-100 rounded-lg flex items-center justify-center mx-auto mb-2">
                             <svg class="w-6 h-6 text-indigo-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -172,9 +174,9 @@
             </div>
 
             <!-- Processing Section -->
-            <div id="processingSection" class="hidden h-full flex flex-col">
+            <div id="processingSection" class="hidden">
                 <!-- Detected Info -->
-                <div class="bg-green-50 border border-green-200 rounded-lg p-3 mb-4 flex items-center">
+                <div class="bg-green-50 border border-green-200 rounded-lg p-3 mb-4 flex items-center max-w-6xl mx-auto">
                     <svg class="w-5 h-5 text-green-600 mr-2 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"/>
                     </svg>
@@ -185,7 +187,7 @@
                 </div>
 
                 <!-- Main Content -->
-                <div class="bg-white rounded-xl shadow-lg p-4 border border-gray-200 flex-1 overflow-hidden">
+                <div class="bg-white rounded-xl shadow-lg p-4 border border-gray-200 max-w-6xl mx-auto" style="height: 600px;">
                     <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 h-full">
                         <!-- Preview -->
                         <div class="flex flex-col h-full">
@@ -212,7 +214,7 @@
                         <!-- Settings -->
                         <div class="flex flex-col h-full overflow-auto">
                             <div class="flex justify-between items-center mb-3">
-                                <h3 class="text-lg font-bold text-gray-900">Settings</h3>
+                                <h3 class="text-lg font-bold text-gray-900">Advanced Settings</h3>
                                 <button id="helpBtn" class="w-7 h-7 bg-indigo-100 hover:bg-indigo-200 rounded-full flex items-center justify-center text-indigo-600 transition-colors relative">
                                     <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8.228 9c.549-1.165 2.03-2 3.772-2 2.21 0 4 1.343 4 3 0 1.4-1.278 2.575-3.006 2.907-.542.104-.994.54-.994 1.093m0 3h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/>
