--- a/frontend/index.html
+++ b/frontend/index.html
@@ -187,10 +187,10 @@
                 </div>
 
                 <!-- Main Content -->
-                <div class="bg-white rounded-xl shadow-lg p-4 border border-gray-200 max-w-6xl mx-auto" style="height: 600px;">
-                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 h-full">
+                <div class="bg-white rounded-xl shadow-lg p-4 border border-gray-200 max-w-6xl mx-auto">
+                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
                         <!-- Preview -->
-                        <div class="flex flex-col h-full">
+                        <div class="flex flex-col" style="height: 500px;">
                             <div class="flex justify-between items-center mb-3">
                                 <h3 class="text-lg font-bold text-gray-900">Preview</h3>
                                 <button id="downloadBtn" class="bg-indigo-600 hover:bg-indigo-700 text-white font-semibold px-4 py-2 rounded-lg flex items-center space-x-2 shadow-sm hover:shadow transition-all text-sm">
@@ -212,7 +212,7 @@
                         </div>
 
                         <!-- Settings -->
-                        <div class="flex flex-col h-full overflow-auto">
+                        <div class="flex flex-col" style="height: 500px;">
                             <div class="flex justify-between items-center mb-3">
                                 <h3 class="text-lg font-bold text-gray-900">Advanced Settings</h3>
                                 <button id="helpBtn" class="w-7 h-7 bg-indigo-100 hover:bg-indigo-200 rounded-full flex items-center justify-center text-indigo-600 transition-colors relative">
@@ -232,11 +232,11 @@
                                 </button>
                             </div>
 
-                            <div class="space-y-3 flex-1">
+                            <div class="space-y-3 overflow-auto flex-1">
                                 <!-- Keywords -->
                                 <div>
-                                    <label class="block text-xs font-semibold text-gray-700 mb-1">Remove Keywords</label>
-                                    <input type="text" id="keywords" class="w-full px-3 py-2 rounded-lg border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 transition-all text-sm" placeholder="e.g., CONFIDENTIAL, DRAFT">
+                                    <label class="block text-xs font-semibold text-gray-700 mb-1">Remove Keywords (comma-separated)</label>
+                                    <input type="text" id="keywords" class="w-full px-3 py-2 rounded-lg border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 transition-all text-sm" placeholder="Enter keywords to remove, e.g., CONFIDENTIAL, DRAFT, COPY">
                                 </div>
 
                                 <!-- Match Case -->
