--- a/frontend/index.html
+++ b/frontend/index.html
@@ -118,19 +118,19 @@
 
                 <!-- Uploaded File Display with Close Button -->
                 <div id="uploadedFileDisplay" class="hidden max-w-xl mx-auto mb-6 bg-gradient-to-br from-indigo-50 to-white rounded-xl p-4 shadow-lg border-2 border-indigo-300">
-                    <div class="flex items-center justify-between">
-                        <div class="flex items-center space-x-3">
-                            <div class="w-12 h-12 bg-indigo-600 rounded-lg flex items-center justify-center shadow-md">
+                    <div class="flex items-center justify-between gap-3">
+                        <div class="flex items-center space-x-3 min-w-0 flex-1">
+                            <div class="w-12 h-12 bg-indigo-600 rounded-lg flex items-center justify-center shadow-md flex-shrink-0">
                                 <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"/>
                                 </svg>
                             </div>
-                            <div class="text-left flex-1">
-                                <p class="font-bold text-gray-900 text-base" id="uploadedFileName">document.pdf</p>
+                            <div class="text-left min-w-0 flex-1">
+                                <p class="font-bold text-gray-900 text-base truncate" id="uploadedFileName" title="">document.pdf</p>
                                 <p class="text-sm text-green-600 font-medium">✓ File uploaded successfully</p>
                             </div>
                         </div>
-                        <button id="removeFileBtn" class="text-gray-400 hover:text-red-600 hover:bg-red-50 transition-all p-2 rounded-lg" title="Remove file and upload another">
+                        <button id="removeFileBtn" class="text-gray-400 hover:text-red-600 hover:bg-red-50 transition-all p-2 rounded-lg flex-shrink-0" title="Remove file and upload another">
                             <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" d="M6 18L18 6M6 6l12 12"/>
                             </svg>
@@ -174,7 +174,7 @@
             </div>
 
             <!-- Processing Section -->
-            <div id="processingSection" class="hidden">
+            <div id="processingSection" class="hidden pb-4">
                 <!-- Detected Info -->
                 <div class="bg-green-50 border border-green-200 rounded-lg p-3 mb-4 flex items-center max-w-6xl mx-auto">
                     <svg class="w-5 h-5 text-green-600 mr-2 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -182,7 +182,7 @@
                     </svg>
                     <div class="flex-1 text-sm">
                         <span class="font-semibold text-green-900">Detected: </span>
-                        <span id="detectedText" class="text-green-800"></span>
+                        <span id="detectedText" class="text-green-800">None detected</span>
                     </div>
                 </div>
 
