Design changes, added multiple fucntionalities feedback and updated admin panel added install option

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -124,10 +124,10 @@
             <div id="uploadSection" class="text-center mb-4">
                 <!-- Hero Title - Only show when no file uploaded -->
                 <div id="heroSection">
-                    <h2 class="text-4xl font-bold text-gray-900 mb-2">
+                    <h2 class="text-2xl sm:text-3xl lg:text-4xl font-bold text-gray-900 mb-2">
                         Precision Document Cleaning
                     </h2>
-                    <p class="text-gray-600 text-base mb-6 max-w-3xl mx-auto">
+                    <p class="text-gray-600 text-sm sm:text-base mb-4 sm:mb-6 max-w-3xl mx-auto px-2">
                         Remove watermarks, stamps, and margins from your PDFs with professional-grade accuracy. 100%
                         private, client-side processing.
                     </p>
@@ -135,14 +135,14 @@
 
                 <!-- Drop Zone -->
                 <div id="dropzone"
-                    class="dropzone-card max-w-xl mx-auto mb-6 border-2 border-dashed border-gray-300 rounded-2xl p-8 cursor-pointer bg-gradient-to-br from-gray-50 to-white transition-all">
-                    <svg class="w-12 h-12 mx-auto mb-3 text-gray-400" fill="none" stroke="currentColor"
+                    class="dropzone-card max-w-xl mx-auto mb-4 sm:mb-6 border-2 border-dashed border-gray-300 rounded-2xl p-6 sm:p-8 cursor-pointer bg-gradient-to-br from-gray-50 to-white transition-all">
+                    <svg class="w-10 h-10 sm:w-12 sm:h-12 mx-auto mb-3 text-gray-400" fill="none" stroke="currentColor"
                         viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                             d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M15 13l-3-3m0 0l-3 3m3-3v12" />
                     </svg>
-                    <p class="text-xl font-semibold text-gray-700 mb-1">Drop PDF here</p>
-                    <p class="text-gray-500 text-sm mb-2">or click to browse from your device</p>
+                    <p class="text-lg sm:text-xl font-semibold text-gray-700 mb-1">Drop PDF here</p>
+                    <p class="text-gray-500 text-xs sm:text-sm mb-2">or tap to browse from your device</p>
                     <p class="text-xs text-gray-400">
                         <span class="font-medium">MAX 50MB</span> •
                         <span class="font-medium">SECURED 256-BIT</span>
@@ -180,7 +180,8 @@
                 </div>
 
                 <!-- Features -->
-                <div id="featuresSection" class="grid grid-cols-1 sm:grid-cols-3 gap-4 max-w-3xl mx-auto">
+                <div id="featuresSection"
+                    class="grid grid-cols-1 sm:grid-cols-3 gap-3 sm:gap-4 max-w-3xl mx-auto px-2 sm:px-0">
                     <div class="feature-card bg-white border border-gray-200 rounded-xl p-5 text-center">
                         <div class="w-12 h-12 bg-indigo-100 rounded-lg flex items-center justify-center mx-auto mb-2">
                             <svg class="w-6 h-6 text-indigo-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -238,7 +239,7 @@
                             </div>
                             <div class="flex-1 min-w-0">
                                 <p class="font-bold text-gray-900 truncate" id="processingFileName">document.pdf</p>
-                                <p class="text-xs text-green-600">✓ Ready to clean</p>
+                                <p class="text-xs text-green-600">✓ Ready to Download</p>
                             </div>
                             <button id="changeFileBtn" class="text-gray-400 hover:text-red-500 ml-auto sm:ml-2"
                                 title="Change file">
@@ -271,7 +272,8 @@
                                     <span id="detectedText">None</span>
                                 </span>
                             </div>
-                            <div id="previewContainer" class="bg-gray-100 flex-1 overflow-auto min-h-[350px]">
+                            <div id="previewContainer"
+                                class="bg-gray-100 flex-1 overflow-auto min-h-[280px] sm:min-h-[320px] lg:min-h-[350px]">
                                 <div id="previewLoading" class="flex items-center justify-center h-full">
                                     <div class="text-center">
                                         <div
@@ -308,7 +310,7 @@
                                     margins</label>
                                 <p class="text-sm text-gray-400 mb-3">Cut headers, footers, or page numbers from edges
                                 </p>
-                                <div class="grid grid-cols-2 gap-4">
+                                <div class="grid grid-cols-2 gap-3 sm:gap-4">
                                     <div class="bg-gray-50 p-3 rounded-xl">
                                         <div class="flex justify-between items-center mb-2">
                                             <span class="text-sm text-gray-600">Top</span>
